Multiple quit dialogs possible #59946

Closed
opened 2018-12-29 10:39:38 +01:00 by Shane Ambler · 4 comments

Blender Version
Broken: 2.80 7c438e5366

Short description of error
If the windows close box is clicked multiple times a prompt quit dialog is created each time. This leads to multiple clicks needed to dismiss them before blender quits.

Exact steps for others to reproduce the error
Enable prompt quit and move the default cube, then click the windows close box multiple times.

The front most dialog can be moved, in the example image I have moved each one before clicking the close widget again.

multi_quit.jpg

**Blender Version** Broken: 2.80 7c438e5366b **Short description of error** If the windows close box is clicked multiple times a prompt quit dialog is created each time. This leads to multiple clicks needed to dismiss them before blender quits. **Exact steps for others to reproduce the error** Enable prompt quit and move the default cube, then click the windows close box multiple times. The front most dialog can be moved, in the example image I have moved each one before clicking the close widget again. ![multi_quit.jpg](https://archive.blender.org/developer/F6105417/multi_quit.jpg)
Author

Added subscriber: @sambler

Added subscriber: @sambler
Sebastian Parborg self-assigned this 2018-12-29 12:18:54 +01:00

I've posted a fix for this issue: D4147

I've posted a fix for this issue: [D4147](https://archive.blender.org/developer/D4147)

This issue was referenced by e571f0255f

This issue was referenced by e571f0255f2b045efb0525ebe104322bc331d584

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59946
No description provided.