Fix T59946: multiple quit dialogs possible.

Differential Revision: https://developer.blender.org/D4147